feat: setup workspace if there is no workspace
