# services/portal/entrypoint/rest/account_setup.go
@@ -13,6 +13,7 @@ import (
 )
 
 type AccountSetupReq struct {
+	WorkspaceName string `json:"workspace_name"`
 }
 
 type AccountSetupRes struct {
@@ -22,17 +23,24 @@ type AccountSetupRes struct {
 
 // UseAccountSetup
 // @Tags		account
-// @Router		/account/me			[put]
+// @Router		/account/setup			[post]
 // @Param		props				body		AccountSetupReq	true	"setup options"
 // @Success		200					{object}	AccountSetupRes
 // @Failure		default				{object}	gateway.Error
 // @Security	BearerAuth
 func UseAccountSetup(service *portal) gin.HandlerFunc {
 	return func(ginctx *gin.Context) {
+		var req AccountSetupReq
+		if err := ginctx.ShouldBindJSON(&req); err != nil {
+			service.logger.Error(err)
+			ginctx.AbortWithStatusJSON(http.StatusBadRequest, gateway.NewError("malformed request"))
+			return
+		}
+
 		ctx := ginctx.MustGet(gateway.Ctx).(context.Context)
 		acc := ctx.Value(gateway.CtxAccount).(*authenticator.Account)
 
-		in := &usecase.AccountSetupIn{AccountId: acc.Sub}
+		in := &usecase.AccountSetupIn{AccountId: acc.Sub, WorkspaceName: req.WorkspaceName}
 		if err := in.Validate(); err != nil {
 			service.logger.Errorw(err.Error(), "data", utils.Stringify(in))
 			ginctx.AbortWithStatusJSON(http.StatusBadRequest, gateway.NewError("invalid request"))
